fix y overflow from remaining 100vh

--- a/src/pages/portfolio.css
+++ b/src/pages/portfolio.css
@@ -64,8 +64,6 @@ body .portfolio {
 }
 
 .portfolio .grid {
-    width: 100%;
-    min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
